fixed cart empty test align

--- a/client/src/components/CSS/cart.css
+++ b/client/src/components/CSS/cart.css
@@ -129,3 +129,9 @@
 div {
     text-align: center;
 }
+
+.emptyText {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
